--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
-
-
 buildscript { scriptHandler ->
     apply from: 'repositories.gradle', to: scriptHandler
     dependencies {
         classpath('org.springframework.build.gradle:propdeps-plugin:0.0.7')
+        classpath "io.spring.gradle:dependency-management-plugin:${springDmPluginVersion}"
     }
 }
 
@@ -24,6 +23,7 @@ subprojects { scriptHandler1 ->
         apply from: rootProject.rootDir.path + '/repositories.gradle', to: scriptHandler
         dependencies {
             classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+            classpath "io.spring.gradle:dependency-management-plugin:${springDmPluginVersion}"
         }
     }
 
